# doorbell

./: .busted  .dockerignore  .env  .gitignore  .luacheckrc  Cargo.toml  Dockerfile  README.md  config.default.toml  config.json  doorbell-dev-1.rockspec  entrypoint.sh  nginx.conf  nginx.template.conf
.github/actions/geoip-download/: action.yml
.github/workflows/: docker.yml  test.yml
assets/: answer.template.html  config.default.json  dashboard.json  nginx.template.conf  rule_list.template.html  validate_email.template.html
assets/nginx.include/: http.openidc.conf  http.shm.conf  main.thread-pools.conf
assets/public/: verify.css  verify.html  verify.js
conf/: rules.json
dev/: .gitignore  direnv.sh  luarocks-config.lua
doorbell-nextjs/: package.json
doorbell-nextjs/.next/: build-manifest.json  trace
doorbell-nextjs/.next/server/: middleware-build-manifest.js
lib/: doorbell.lua
lib/doorbell/: api.lua  auth.lua  cache.lua  config.lua  constants.lua  env.lua  http.lua  intent.lua  ip.lua  log.lua  mail.lua  metrics.lua  middleware.lua  nginx.lua  nginx_defaults.lua  notify.lua  ota.lua  plugins.lua  policy.lua  rate-limit.lua  request.lua  ring.lua  router.lua  routes.lua  rule.lua  rules.lua  schema.lua  shm.lua  users.lua  util.lua  verify.lua  views.lua
lib/doorbell/api/: access.lua  auth-test.lua  ip.lua  nginx.lua  rules.lua  schema.lua  webhooks.lua
lib/doorbell/auth/: access.lua  api-key.lua  email.lua  forwarded-request.lua  openid.lua  request.lua  ring.lua
lib/doorbell/cache/: shared.lua
lib/doorbell/http/: constants.lua
scripts/: download-geoip-databases.sh  download-geoip-test-databases.sh  generate-openapi-spec  generate-schema-docs.lua  sidecar.sh  test-docker-container.sh
spec/: busted  busted-runner.lua  testing.lua
spec/01-unit/: 01-rules_spec.lua  03-notify_spec.lua  04-util_spec.lua  05-users_spec.lua  06-shm_spec.lua  07-util-uri_spec.lua
spec/02-integration/: 01-doorbell_spec.lua  01-ring_spec.lua  02-ota_spec.lua  03-rules-api_spec.lua  04-state_spec.lua  05-ip-api_spec.lua  06-answer_spec.lua  07-stats_spec.lua  08-json-log_spec.lua  09-approvals-api_spec.lua  10-prometheus-metrics_spec.lua  11-nginx-api_spec.lua  12-api-auth_spec.lua  13-email-validation_spec.lua
spec/fixtures/: auth.cert.pem  auth.jwks.json  auth.private.pem  auth.pub.pem  busted.nginx.conf  busted.nginx.http.conf  nginx.include.main.test-env.conf
spec/testing/: assertions.lua  await.lua  client.lua  config.lua  constants.lua  exec.lua  fs.lua  mock-notify.lua  mock-upstream.lua  nginx.lua
src/: app.rs  cli.rs  config.rs  database.rs  geo.rs  main.rs  net.rs  notify.rs  rules.rs  types.rs
src/access/: control.rs  mod.rs  request.rs
src/migrations/: 0000_init.sql  _metadata.sql
src/notify/: pushover.rs
src/routes/: answer.rs  mod.rs  ring.rs  root.rs  rules.rs
src/rules/: action.rs  collection.rs  condition.rs  manager.rs  matcher.rs  mod.rs  repo.rs  source.rs
src/templates/: answer.html
src/types/: api.rs  http.rs  net.rs  pattern.rs  storage.rs  uuid.rs
(+58 files in other folders)
