[package]
name = "doorbell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1"
async-trait = "0.1.74"
base64 = "0.21.5"
boon = "0.5.1"
chrono = "0.4"
cidr = "0.2"
clap = { version = "4", features = ["derive"] }
config = "0.13"
http = "0.2"
log = "0.4"
md5 = "0.7.0"
#r2d2 = "0.8"
#r2d2_sqlite = "0.23"
regex = "1"
serde = { version = "1", features = ["derive", "serde_derive"] }
serde_derive = "1"
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono", "time", "uuid"] }
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
tokio = { version = "1.34.0", features = ["rt", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
