[package]
name = "doorbell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1"
async-trait = "0.1.74"
base64 = "0.21.5"
boon = "0.5.1"
chrono = { version = "0.4", features = ["serde"] }
cidr = { version = "0.2", features = ["serde"] }
cidr-utils = { version = "0.5.11", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
config = "0.13"
derive_builder = "0.12.0"
env_logger = "0.10.1"
hex = "0.4.3"
http = "0.2"
log = "0.4"
lru-cache = "0.1.2"
maxminddb = "0.23.0"
md5 = "0.7.0"
rand = "0.8.5"
regex = "1"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1", features = ["derive", "serde_derive"] }
serde_derive = "1"
serde_json = "1.0.108"
serde_repr = "0.1.17"
serde_with = { version = "3.4.0", features = ["chrono", "json"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono", "time", "uuid"] }
sqlx-core = "0.7.3"
sqlx-sqlite = "0.7.3"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
tokio = { version = "1.34.0", features = ["rt", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1", features = ["v4", "serde"] }
